# rdws_us

./: .clang-format  .dockerignore  .env.dev  .env.dev-db.example  .env.qa.example  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.dev-db.yml  docker-compose.dev-mq.yml  docker-compose.dev-observability.yml  docker-compose.infra.yml  docker-compose.prod-app.yml  docker-compose.prod-db.yml  docker-compose.qa-app.yml  docker-compose.qa-db.yml  docker-compose.qa-mq.yml  docker-compose.qa-observability.yml  docker-entrypoint.sh  routes.json
.github/workflows/: ci.yml  deploy-prod.yml  deploy-qa.yml  migrate-dev.yml
bruno/IoT Sensor API/: bruno.json
bruno/IoT Sensor API/Auth/: Login.bru
bruno/IoT Sensor API/Device Config/: Create Config.bru  Delete Config.bru  Get Config.bru  Update Config.bru
bruno/IoT Sensor API/Devices/: Create Device.bru  Delete Device.bru  Get Device.bru  List Devices.bru  Update Device.bru
bruno/IoT Sensor API/Farms/: Create Farm.bru  Delete Farm.bru  (+3 more)
db/: flyway.sh  flyway.toml  init_server.sh  up-homelab.sh
db/migrations/: V1__iot_schema.sql  V2__persistence_tables.sql  V3__device_config_one_to_one.sql  V4__device_location_history.sql  V5__backfill_location_threshold.sql  V6__device_credentials.sql  V7__device_is_simulated.sql  V8__sensor_readings_unique.sql
db/seeds/: seed_fake_data.sql
docs/: PLANO_API_REST.md  PLANO_GATEWAY_HTTP.md  PLANO_INGESTION.md  Plano_API_REST.md  Plano_Alerting.md  Plano_DB_IOT_Sensors.md  Plano_Deployment.md  Plano_DeviceCredentials.md  Plano_Gateway_HTTP.md  Plano_Ingestion.md  Plano_Ingestion_Implementacao.md  Plano_SensorSimulatorService.md  Plano_SensorSimulatorService_Implementacao.md  deployment.md
infra/loki/: loki-config.yml
infra/prometheus/: prometheus-dev.yml  prometheus-qa.yml
infra/promtail/: promtail-dev.yml  promtail-qa.yml
scripts/: sync_gateway_routes.py
src/service_broker/: CMakeLists.txt  HttpGateway.cpp  HttpGateway.h  README.md  SERVICES_USAGE.md  SERVICE_BROKER_README.md  example_service_client.cpp  main.cpp  service_gateway_example.cpp  service_gateway_http.cpp  service_gateway_monitor.cpp
src/service_broker/Auth/: AuthMiddleware.cpp  AuthMiddleware.h
src/service_broker/Config/: GatewayConfig.cpp  GatewayConfig.h
src/service_broker/Services/: EventBus.cpp  EventBus.h  EventRouter.cpp  EventRouter.h  ServiceBroker.cpp  ServiceBroker.h  ServiceClient.cpp  ServiceClient.h  ServiceGateway.cpp  ServiceGateway.h  ServiceIdentity.cpp  ServiceIdentity.h  ServiceMonitor.cpp  ServiceMonitor.h  ServiceRegistry.cpp  ServiceRegistry.h
src/service_broker/Utils/: Utils.cpp  Utils.h
src/service_broker/schemas/: README.md  capability_schema_registry.cpp  capability_schema_registry.h  device_config_schemas.h  device_schemas.h  farm_schemas.h  field_schemas.h  sensor_schemas.h  service.h
src/service_broker/tests/: CMakeLists.txt  test_auth_middleware.cpp  test_event_bus.cpp  test_event_router.cpp  test_gateway_config.cpp  test_gateway_integration.cpp  test_gateway_metrics.cpp  test_http_e2e.cpp  test_service_schema.cpp
src/services/: CMakeLists.txt
src/services/auth_service/: AppAuthService.cpp  CMakeLists.txt  auth_service.cpp
src/services/device_config_service/: AppDeviceConfigService.cpp  CMakeLists.txt  device_config_service.cpp
src/services/device_service/: AppDeviceService.cpp  CMakeLists.txt  FieldServiceClient.cpp  FieldServiceClient.h  device_service.cpp
src/services/example_service/: CMakeLists.txt  example_service.cpp
src/services/farm_service/: AppFarmService.cpp  CMakeLists.txt  farm_service.cpp
src/services/field_service/: AppFieldService.cpp  CMakeLists.txt  field_service.cpp
src/services/ingestion_service/: AppIngestionService.cpp  CMakeLists.txt
src/services/persistence_service/: AppPersistenceService.cpp  CMakeLists.txt  persistence_service.cpp
src/services/reading_writer_service/: AppReadingWriterService.cpp  CMakeLists.txt
src/services/sensor_reading_service/: AppSensorReadingService.cpp  CMakeLists.txt  sensor_reading_service.cpp
src/services/sensor_service/: AppSensorService.cpp  CMakeLists.txt  sensor_service.cpp
src/services/sensor_simulator_service/: AppSensorSimulatorService.cpp  CMakeLists.txt
src/shared/: CMakeLists.txt  README.md
src/shared/amqp/: amqp_client.cpp  amqp_client.h
src/shared/coap/: coap_dtls_client.cpp  coap_dtls_client.h
src/shared/config/: config.cpp  config.h
src/shared/crypto/: credential_cipher.cpp  credential_cipher.h
src/shared/database/: idatabase.h  postgresql_database.cpp  postgresql_database.h
src/shared/repository/: DeviceConfigRepository.cpp  DeviceConfigRepository.h  DeviceCredentialRepository.cpp  DeviceCredentialRepository.h  DeviceRepository.cpp  DeviceRepository.h  FarmRepository.cpp  FarmRepository.h  FieldRepository.cpp  FieldRepository.h  SensorReadingRepository.cpp  SensorReadingRepository.h  SensorRepository.cpp  SensorRepository.h
src/shared/service/: DeviceConfigService.cpp  DeviceConfigService.h  DeviceCredentialService.cpp  DeviceCredentialService.h  DeviceService.cpp  DeviceService.h  FarmService.cpp  FarmService.h  FieldService.cpp  FieldService.h  IFieldValidator.h  SensorReadingService.cpp  SensorReadingService.h  SensorService.cpp  SensorService.h
src/shared/service/client/: FarmServiceClient.cpp  FarmServiceClient.h  FieldServiceClient.cpp  FieldServiceClient.h  IFarmValidator.h
src/shared/tests/: CMakeLists.txt  test_coap_dtls_client.cpp  test_credential_cipher.cpp  test_json_merge.cpp  test_logger.cpp  test_metrics.cpp  test_schema_validator.cpp  test_validation.cpp
src/shared/types/: lambda_context.cpp  lambda_context.h  lambda_event.cpp  lambda_event.h  service_result.h
src/shared/utils/: capability_router.h  json_helper.cpp  json_helper.h  json_merge.cpp  json_merge.h  lambda_params_helper.cpp  lambda_params_helper.h  logger.cpp  logger.h  metrics.cpp  metrics.h  profiler.h  response_helper.cpp  response_helper.h  validation.h
src/shared/validator/: schema_validator.cpp  schema_validator.h
tools/: generate_token-usage.md  generate_token.py
(+23 files in other folders)
